--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.5.1",
+    "dayjs": "^1.8.31",
     "interactjs": "^1.9.20",
-    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-calendar-timeline": "^0.27.0",
     "react-dom": "^16.13.1",
