--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "dayjs": "^1.8.31",
     "interactjs": "^1.9.20",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-calendar-timeline": "^0.27.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
