--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-calendar-timeline": "^0.27.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-timetable-events": "^1.0.2",
     "styled-components": "^5.1.1",
     "timetable.js": "^0.9.0"
   },
