--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-timetable-events": "^1.0.2",
-    "styled-components": "^5.1.1",
-    "timetable.js": "^0.9.0"
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
