--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.4.1",
     "react-timetable-events": "^1.0.2",
     "redux": "^4.0.5",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
