--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.4.1",
     "react-timetable-events": "^1.0.2",
     "redux": "^4.0.5",
+    "rrule": "^2.6.4",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7"
   },
