--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-calendar-timeline": "^0.27.0",
     "react-dom": "^16.13.1",
+    "react-measure": "^2.3.0",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.1",
     "react-timetable-events": "^1.0.2",
