--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,10 @@
     "interactjs": "^1.9.20",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
-    "react-calendar-timeline": "^0.27.0",
     "react-dom": "^16.13.1",
     "react-measure": "^2.3.0",
     "react-redux": "^7.2.1",
-    "react-scripts": "3.4.1",
-    "react-timetable-events": "^1.0.2",
+    "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
     "rrule": "^2.6.4",
     "styled-components": "^5.1.1",
