--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,14 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.6.4",
+    "sequelize-cli": "^6.2.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "pg": "^8.3.3",
+    "sequelize": "^6.3.5"
   }
 }
