feature(server): create db models

--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
   "homepage": "https://github.com/hucki/necto#readme",
   "prettier": {
     "singleQuote": true
-  }
+  },
+  "devDependencies": {}
 }
