--- a/server/.env.example
+++ b/server/.env.example
@@ -6,3 +6,4 @@ DEVREMOTE_DB_HOST=<remote host>
 DEVREMOTE_DB_USER=<user>
 DEVREMOTE_DB_PASSWORD=<pass>
 DEVREMOTE_DB_NAME=necto_dev
+NODE_ENV=<development | production>
