--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.6.4",
+    "@types/validator": "^13.1.0",
     "sequelize-cli": "^6.2.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.2"
