--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.6.4",
+    "@types/sequelize": "^4.28.9",
     "@types/validator": "^13.1.0",
     "sequelize-cli": "^6.2.0",
     "tslint": "^6.1.3",
@@ -22,6 +23,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "pg": "^8.3.3",
     "sequelize": "^6.3.5"
   }
