--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,5 +7,8 @@
   "sourceMap": true,
   "outDir": "dist/src"
  },
-  "lib": ["es2015"]
+  "lib": ["es2015"],
+  "include": [
+    "src/**/*.ts"
+  ]
  }
