--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
     "@types/express": "^4.17.8",
     "@types/node": "^14.6.4",
     "@types/sequelize": "^4.28.9",
+    "@types/umzug": "^2.2.3",
     "@types/validator": "^13.1.0",
     "sequelize-cli": "^6.2.0",
+    "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.2"
   },
@@ -25,6 +27,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.3.3",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "umzug": "^2.3.0"
   }
 }
