--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.2.1",
+    "@ant-design/icons": "^4.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.5.1",
-    "dayjs": "^1.8.31",
-    "interactjs": "^1.9.20",
+    "antd": "^4.6.3",
+    "dayjs": "^1.8.35",
+    "interactjs": "^1.9.22",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
-    "react-measure": "^2.3.0",
+    "react-measure": "^2.5.2",
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
-    "rrule": "^2.6.4",
-    "styled-components": "^5.1.1",
+    "rrule": "^2.6.6",
+    "styled-components": "^5.2.0",
     "typescript": "^3.9.7"
   },
   "scripts": {
@@ -44,7 +44,9 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.5.0",
-    "eslint-plugin-react": "^7.20.5"
+    "eslint": "^7.8.1",
+    "eslint-plugin-react": "^7.20.6",
+    "react-query": "^2.15.4",
+    "react-query-devtools": "^2.4.7"
   }
 }
