--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "pg": "^8.3.3",
     "sequelize": "^6.3.5",
     "umzug": "^2.3.0"
