--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "eslint": "^7.8.1",
     "eslint-plugin-react": "^7.20.6",
     "react-query": "^2.15.4",
-    "react-query-devtools": "^2.4.7"
+    "react-query-devtools": "^2.4.7",
+    "react-use-dimensions": "^1.2.1"
   }
 }
