--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preinstall": "(cd server && npm install); (cd client && npm install)",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd client && npm start"
+    "start:server": "cd server && npm start",
+    "start:client": "cd client && npm start",
+    "start": "concurrently \"npm run start:server\" \"npm run start:client\""
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,8 @@
   "prettier": {
     "singleQuote": true
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "concurrently": "^5.3.0"
+  },
+  "dependencies": {}
 }
