--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^14.6.4",
     "@types/sequelize": "^4.28.9",
     "@types/umzug": "^2.2.3",
+    "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
     "sequelize-cli": "^6.2.0",
     "ts-node": "^9.0.0",
