chore(server): setup concurrent ts watcher + nodemon

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,6 +7,7 @@
     "sourceMap": true,
     "outDir": "dist/src"
   },
+  "compileOnSave": true,
   "lib": ["es2015"],
   "include": ["src/**/*.ts", "src/db/config/config.ts"]
 }
