--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "start": "npx tsc && node dist/src/app.js"
+    "start": "concurrently \"tsc -w\" \"nodemon dist/src/app.js\"",
+    "start-once": "npx tsc && node dist/src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@types/umzug": "^2.2.3",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
+    "concurrently": "^5.3.0",
     "sequelize-cli": "^6.2.0",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
