--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
     "eslint": "^7.8.1",
     "eslint-plugin-react": "^7.20.6",
     "react-query": "^2.15.4",
