--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "redux": "^4.0.5",
@@ -44,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.0",
     "eslint": "^7.8.1",
     "eslint-plugin-react": "^7.20.6",
