--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "auth0-js": "^9.14.0",
     "cors": "^2.8.5",
     "dayjs": "^1.8.35",
     "dotenv": "^8.2.0",
