--- a/server/.env.example
+++ b/server/.env.example
@@ -8,3 +8,6 @@ DEVREMOTE_DB_USER=<user>
 DEVREMOTE_DB_PASSWORD=<pass>
 DEVREMOTE_DB_NAME=necto_dev
 NODE_ENV=<development | production>
+AUTH0_CLIENT_ID=<auth0 client ID>
+AUTH0_ISSUER_BASE_URL=<auth0 issuer base URL>
+AUTH0_SECRET=<auth0 client secret>
