--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "dayjs": "^1.8.35",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-openid-connect": "^2.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.3.3",
     "sequelize": "^6.3.5",
