--- a/server/package.json
+++ b/server/package.json
@@ -26,12 +26,13 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "auth0-js": "^9.14.0",
+    "auth0": "^2.30.0",
     "cors": "^2.8.5",
     "dayjs": "^1.8.35",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-openid-connect": "^2.0.0",
+    "express-jwt": "^6.0.0",
+    "jwks-rsa": "^1.11.0",
     "morgan": "^1.10.0",
     "pg": "^8.3.3",
     "sequelize": "^6.3.5",
