--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "devDependencies": {
     "concurrently": "^5.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@chakra-ui/react": "^1.0.2",
+    "framer-motion": "^2.9.5"
+  }
 }
