--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "interactjs": "^1.10.11",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
