--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.1.6",
     "@types/react-redux": "^7.1.18",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.8",
