--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,8 @@
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.8",
     "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.25.1",
     "react-query": "^2.26.4",
