--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.16.13",
     "dayjs": "^1.10.6",
+    "i18next": "^21.4.0",
     "interactjs": "^1.10.11",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.13.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
