--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.16.13",
     "dayjs": "^1.10.6",
     "i18next": "^21.4.0",
+    "i18next-browser-languagedetector": "^6.1.2",
     "interactjs": "^1.10.11",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
