--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.4",
     "@auth0/auth0-react": "^1.6.0",
+    "@chakra-ui/react": "^1.6.12",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.16.13",
     "dayjs": "^1.10.6",
+    "framer-motion": "^5.2.1",
     "i18next": "^21.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "interactjs": "^1.10.11",
