--- a/package.json
+++ b/package.json
@@ -27,8 +27,5 @@
   "devDependencies": {
     "concurrently": "^5.3.0"
   },
-  "dependencies": {
-    "@chakra-ui/react": "^1.1.2",
-    "framer-motion": "^2.9.5"
-  }
+  "dependencies": {}
 }
