--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.18.3",
     "dayjs": "^1.10.7",
@@ -27,6 +27,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
+    "nth-check": ">=2.0.1",
     "redux": "^4.1.2",
     "rrule": "^2.6.8",
     "styled-components": "^5.3.3",
