--- a/server/package.json
+++ b/server/package.json
@@ -21,12 +21,14 @@
     "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.1",
     "concurrently": "^5.3.0",
+    "prisma": "^3.8.1",
     "sequelize-cli": "^6.4.1",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@prisma/client": "^3.8.1",
     "auth0": "^2.37.0",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
