chore(env): add prisma example

--- a/server/.env.example
+++ b/server/.env.example
@@ -11,3 +11,12 @@ NODE_ENV=<development | production>
 AUTH0_CLIENT_ID=<auth0 client ID>
 AUTH0_ISSUER_BASE_URL=<auth0 issuer base URL>
 AUTH0_SECRET=<auth0 client secret>
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#using-environment-variables
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server and MongoDB (Preview).
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://user:password@localhost:5432/necto_dev?schema=public"
