--- a/server/package.json
+++ b/server/package.json
@@ -19,14 +19,11 @@
     "@types/auth0": "^2.34.10",
     "@types/express": "^4.17.13",
     "@types/node": "^14.18.5",
-    "@types/sequelize": "^4.28.11",
-    "@types/umzug": "^2.3.3",
     "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.1",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.15",
     "prisma": "^3.8.1",
-    "sequelize-cli": "^6.4.1",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.5.4"
@@ -40,9 +37,6 @@
     "express": "^4.17.2",
     "express-jwt": "^6.1.0",
     "jwks-rsa": "^2.0.5",
-    "morgan": "^1.10.0",
-    "pg": "^8.7.1",
-    "sequelize": "^6.13.0",
-    "umzug": "^2.3.0"
+    "morgan": "^1.10.0"
   }
 }
