--- a/client/package.json
+++ b/client/package.json
@@ -67,6 +67,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
+    "mini-css-extract-plugin": "^2.5.2",
     "prettier": "^2.5.1",
     "react-query": "^2.26.4",
     "react-query-devtools": "^2.6.3",
