--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.18.3",
+    "date-fns": "^2.28.0",
     "dayjs": "^1.10.7",
     "framer-motion": "^4.1.17",
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
     "interactjs": "^1.10.11",
+    "nth-check": ">=2.0.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-datepicker": "^4.6.0",
@@ -27,7 +29,6 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
-    "nth-check": ">=2.0.1",
     "redux": "^4.1.2",
     "rrule": "^2.6.8",
     "styled-components": "^5.3.3",
