--- a/server/.env.example
+++ b/server/.env.example
@@ -8,6 +8,7 @@ DEVREMOTE_DB_USER=<user>
 DEVREMOTE_DB_PASSWORD=<pass>
 DEVREMOTE_DB_NAME=necto_dev
 NODE_ENV=<development | production>
+REDIS_HOST=<redis_host>
 SESSION_SECRET=<session_secret>
 JWT_SECRET=<jwt_secret>
 AUTH0_CLIENT_ID=<auth0 client ID>
