--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
   "devDependencies": {
     "@types/auth0": "^2.34.10",
     "@types/bcrypt": "^5.0.0",
+    "@types/connect-redis": "0.0.18",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/node": "^14.18.5",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
@@ -42,14 +44,14 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.2",
     "express-jwt": "^6.1.2",
-    "express-session": "^1.17.2",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.0",
+    "ioredis": "^5.0.5",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.5",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "redis": "4.0.6"
+    "passport-local": "^1.0.0"
   }
 }
