feat(server): add nodemailer ENV

--- a/server/.env.example
+++ b/server/.env.example
@@ -14,6 +14,12 @@ JWT_SECRET=<jwt_secret>
 AUTH0_CLIENT_ID=<auth0 client ID>
 AUTH0_ISSUER_BASE_URL=<auth0 issuer base URL>
 AUTH0_SECRET=<auth0 client secret>
+# settings for password reset email
+MAIL_USER=<mail-user>
+MAIL_PASSWORD=<mail-password>
+MAIL_HOST=<smtp host>
+MAIL_PORT=<STARTTLS port>
+MAIL_FROM=<email sender address>
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
