chore(env.example): add ENCRYPTION_KEY env

--- a/server/.env.example
+++ b/server/.env.example
@@ -11,6 +11,7 @@ NODE_ENV=<development | production>
 REDIS_HOST=<redis_host>
 SESSION_SECRET=<session_secret>
 JWT_SECRET=<jwt_secret>
+ENCRYPTION_KEY=<encryption key 32 chars (256 bits)>
 AUTH0_CLIENT_ID=<auth0 client ID>
 AUTH0_ISSUER_BASE_URL=<auth0 issuer base URL>
 AUTH0_SECRET=<auth0 client secret>
