--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ node_modules
 /db-data
 docker-compose.yml
 docker-compose-prod.yml
+docker-compose-stage.yml
 /pgadmin/pgadmin.env
 /client/nginx/conf/nginx.conf
+/client/nginx/conf/nginx.stage.conf
