--- a/server/.env.example
+++ b/server/.env.example
@@ -10,6 +10,7 @@ DEVREMOTE_DB_NAME=necto_dev
 NODE_ENV=<development | production>
 REDIS_HOST=<redis_host>
 SESSION_SECRET=<session_secret>
+SESSION_COOKIE_SECURE=true
 JWT_SECRET=<jwt_secret>
 ENCRYPTION_KEY=<encryption key 32 chars (256 bits)>
 AUTH0_CLIENT_ID=<auth0 client ID>
