--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
     "interactjs": "^1.10.11",
+    "jspdf": "^2.5.1",
     "nth-check": ">=2.0.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
