--- a/client/package.json
+++ b/client/package.json
@@ -3,37 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@auth0/auth0-react": "^1.9.0",
-    "@chakra-ui/react": "^1.7.4",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^7.2.1",
-    "date-fns": "^2.28.0",
-    "date-holidays": "^3.16.5",
-    "dayjs": "^1.10.7",
-    "framer-motion": "^4.1.17",
-    "i18next": "^21.6.6",
-    "i18next-browser-languagedetector": "^6.1.2",
-    "interactjs": "^1.10.11",
+    "@chakra-ui/react": "^2.3.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@tanstack/react-query": "^4.13.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "date-fns": "^2.29.3",
+    "date-holidays": "^3.16.8",
+    "dayjs": "^1.11.6",
+    "framer-motion": "^7.6.2",
+    "i18next": "^22.0.3",
+    "i18next-browser-languagedetector": "^7.0.0",
+    "interactjs": "^1.10.17",
     "jspdf": "^2.5.1",
     "nth-check": ">=2.0.1",
-    "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-datepicker": "^4.6.0",
-    "react-dom": "^17.0.2",
-    "react-i18next": "^11.15.3",
-    "react-icons": "^4.4.0",
-    "react-query": "^2.26.4",
-    "react-redux": "^7.2.6",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^12.0.0",
+    "react-icons": "^4.6.0",
+    "react-redux": "^8.0.4",
+    "react-router": "^6.4.2",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
-    "redux": "^4.1.2",
+    "redux": "^4.2.0",
     "rrule": "^2.7.1",
-    "styled-components": "^5.3.3",
-    "typescript": "^3.9.10"
+    "styled-components": "^5.3.6",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "pretest": "eslint --ignore-path .gitignore .",
@@ -58,20 +56,20 @@
     ]
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.3.4",
-    "@types/react-redux": "^7.1.22",
-    "@types/react-router": "^5.1.17",
-    "@types/react-router-dom": "^5.3.2",
+    "@types/react": "^18.0.24",
+    "@types/react-datepicker": "^4.4.2",
+    "@types/react-dom": "^18.0.8",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-router": "^5.1.19",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "mini-css-extract-plugin": "^2.5.2",
-    "prettier": "^2.5.1",
-    "react-query-devtools": "^2.6.3",
-    "react-use-dimensions": "^1.2.1"
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "mini-css-extract-plugin": "^2.6.1",
+    "prettier": "^2.7.1"
   }
 }
