--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ node_modules
 docker-compose.yml
 docker-compose-prod.yml
 docker-compose-prod-old.yml
+docker-compose-prod-old2.yml
 docker-compose-stage.yml
 docker-compose-stage-certbot.yml
 /pgadmin/pgadmin.env
