--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@react-pdf/renderer": "^3.1.3",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.23.0",
     "@tanstack/react-table": "^8.7.8",
@@ -19,7 +20,6 @@
     "i18next": "^22.0.3",
     "i18next-browser-languagedetector": "^7.0.0",
     "interactjs": "^1.10.17",
-    "jspdf": "^2.5.1",
     "nth-check": ">=2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
