--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@ node_modules
 /db-data
 docker-compose.yml
 docker-compose-prod.yml
+docker-compose-prod.yml.bak
 docker-compose-prod-old.yml
 docker-compose-prod-old2.yml
 docker-compose-stage.yml
+docker-compose-stage.yml.bak
 docker-compose-stage-certbot.yml
 /pgadmin/pgadmin.env
 /client/nginx/conf/nginx.conf
