--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -21,6 +21,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "linen",
   "background_color": "#ffffff"
 }
