chore(package): add ts-japi

--- a/server/package.json
+++ b/server/package.json
@@ -54,6 +54,7 @@
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "ts-japi": "^1.9.0"
   }
 }
