--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-router": "^6.7.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
+    "react-table": "^7.8.0",
     "redux": "^4.2.0",
     "rrule": "^2.7.1",
     "styled-components": "^5.3.6",
