--- a/client/package.json
+++ b/client/package.json
@@ -32,8 +32,7 @@
     "react-table": "^7.8.0",
     "redux": "^4.2.0",
     "rrule": "^2.7.1",
-    "styled-components": "^5.3.6",
-    "typescript": "^4.9.4"
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "pretest": "eslint --ignore-path .gitignore .",
@@ -71,6 +70,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "mini-css-extract-plugin": "^2.7.6",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "typescript": "^5.3.3"
   }
 }
